# xweb

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/helpers/: http_client.rs  mod.rs  parser.rs
src/routes/: http.rs  mod.rs
