[package]
name = "xweb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
serde = "1.0.130"
serde_json = "1.0.67"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }